@@ -26,6 +26,7 @@ $t->get_ok('/api/conversations')->status_is(200)->json_is(
       connection_id   => 'irc-localhost',
       conversation_id => '#convos',
       frozen          => '',
+      info            => {},
       name            => '#Convos',
       topic           => '',
       unread          => 42,
@@ -41,6 +42,7 @@ $t->get_ok('/api/conversations')->status_is(200)->json_is(
       connection_id   => 'irc-localhost',
       conversation_id => '#convos',
       frozen          => '',
+      info            => {},
       name            => '#Convos',
       topic           => '',
       unread          => 42,
@@ -50,6 +52,7 @@ $t->get_ok('/api/conversations')->status_is(200)->json_is(
       connection_id   => 'irc-localhost',
       conversation_id => '#notified',
       frozen          => '',
+      info            => {},
       name            => '#Notified',
       topic           => '',
       unread          => 0,
@@ -93,6 +96,7 @@ $t->get_ok('/api/user?connections=true&conversations=true')->status_is(200)->jso
       connection_id   => 'irc-localhost',
       conversation_id => '#convos',
       frozen          => '',
+      info            => {},
       name            => '#Convos',
       topic           => '',
       unread          => 42,
@@ -102,6 +106,7 @@ $t->get_ok('/api/user?connections=true&conversations=true')->status_is(200)->jso
       connection_id   => 'irc-localhost',
       conversation_id => '#notified',
       frozen          => '',
+      info            => {},
       name            => '#Notified',
       topic           => '',
       unread          => 0,
@@ -111,6 +116,7 @@ $t->get_ok('/api/user?connections=true&conversations=true')->status_is(200)->jso
       connection_id   => 'irc-example',
       conversation_id => '#superheroes',
       frozen          => '',
+      info            => {},
       name            => '#superheroes',
       topic           => '',
       unread          => 34,
